2014-11-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.22 released.

2014-11-24  Carl Hetherington  <cth@carlh.net>

	* Allow import of J2K image sequences.

2014-11-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.21 released.

2014-11-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.20 released.

2014-11-10  Carl Hetherington  <cth@carlh.net>

	* Guess initial scale from the size of video
	content images, taking pixel aspect ratio into
	account where possible.

2014-11-07  c.hetherington  <cth@carlh.net>

	* Add a hint if there is 3D content in a proposed 2D DCP.

2014-11-06  Carl Hetherington  <cth@carlh.net>

	* Basic support for emailing a report of
	a problem (#43).

2014-11-05  c.hetherington  <cth@carlh.net>

	* Add a few more hints.

2014-10-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.19 released.

2014-10-30  Carl Hetherington  <cth@carlh.net>

	* Fix mis-merge causing complete breakage
	of the main window.

2014-10-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.18 released.

2014-10-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.17 released.

2014-11-02  Carl Hetherington  <cth@carlh.net>

	* Be more tolerant of some FFmpeg audio decoding errors;
	should fix #352.

2014-10-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.16 released.

2014-10-24  Carl Hetherington  <cth@carlh.net>

	* Add a pause button for jobs.

	* Experimental support for bypassing colourspace conversion (#266).

	* Version 1.76.6 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.5 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.4 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Rename 'Add folder' to 'Add image sequence'
	and add some tooltips.

	* Move the "keep video in sequence" button into
	the timeline dialogue.

	* Fix mix-placement of content when using the "Down"
	button to move it.

2014-10-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.15 released.
