@@ -1,3 +1,8 @@
+2014-12-11  Carl Hetherington  <cth@carlh.net>
+
+	* Add a language property to subtitle content and use it
+	for the DCP subtitle's language specification.
+
 2014-11-24  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.22 released.
